--- a/Index.html
+++ b/Index.html
@@ -93,11 +93,14 @@
               <form class="w-100 my-2 my-lg-0 mx-auto">
                   <input class="form-control mr-sm-2 search-bar" type="search" placeholder="Search for products, brands and categories" aria-label="Search">
               </form>
-              <button class="btn search-button ml-auto" type="submit">Search</button>
+              <button class="btn search-button" type="submit" style="margin-right: 80px">Search</button>
               <ul class="navbar-nav ml-4 gap-5">
                   <li class="nav-item">
                       <a class="nav-link" href="#">Help</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Account?</a>
+                </li>
                   <li class="nav-item">
                       <a class="nav-link" href="./New K/FirstL.html">Login / Signup</a>
                   </li>
