--- a/Index.html
+++ b/Index.html
@@ -75,7 +75,7 @@
     </div>
       <div>
         <nav class="navbar navbar-expand-lg navbar-custom">
-          <a class="navbar-brand" href="./Index.html">
+          <a class="navbar-brand" href="./index.html">
               <img src="./Pictures/cd-removebg-preview.png" alt="Logo">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
