--- a/Kongastores.html
+++ b/Kongastores.html
@@ -75,7 +75,7 @@
     </div>
       <div>
         <nav class="navbar navbar-expand-lg navbar-custom">
-          <a class="navbar-brand" href="./Index.html">
+          <a class="navbar-brand" href="./index.html">
               <img src="./Pictures/cd-removebg-preview.png" alt="Logo">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,7 +182,7 @@
 </div> -->
 
           <div class=" text-start mx-5 d-flex">
-                <a href="./Index.html"> <h6 class="pss">Home ></h6></a>
+                <a href="./index.html"> <h6 class="pss">Home ></h6></a>
                    <a href=""><h6 class="pss1">Store locator</h6></a>
                      </div>             
                           <div class="text-start mx-5 fw-bold">
